--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pinia": "^2.0.32",
     "swiper": "^9.2.3",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-toastify": "^0.1.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
